-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9.0 RC
-
None
-
-
86e357367 (dev), f39b02ed4 (6.9), 23762f444 (6.9)
MacOS 15.3.2
Qt Creator 16.0.0
Qt 6.9.0
Device: Raspberry Pi4 64 bit with Qt 6.9.0
Steps to reproduce:
- Run order-independent transparency example from Examples/Qt-6.9.0/quick3d/orderindependenttransparency
Expected: The content is rendered or proper message is displayed in the console that it's not supported.
Actual: The black screen appears and error:
Failed to compile shader: 0:2(12): error: extension `GL_OES_sample_variables' unsupported in fragment shaderSource was: #version 300 es #extension GL_OES_sample_variables : require precision highp float; precision highp int;uniform highp sampler2DMS accumTexture; uniform highp sampler2DMS revealageTexture;in vec2 uv_coord; layout(location = 0) out vec4 fragOutput;void main() { vec2 uv = uv_coord; ivec2 iuv = ivec2(uv * vec2(textureSize(accumTexture))); vec4 accum = texelFetch(accumTexture, iuv, gl_SampleID); float a = 1.0 - texelFetch(revealageTexture, iuv, gl_SampleID).x; vec4 color = vec4(accum.xyz / vec3(clamp(accum.w, 9.9999997473787516355514526367188e-05, 5000000.0)), a); fragOutput = color; } Failed to build graphics pipeline state
Reproducibility: 100%
- relates to
-
QTQAINFRA-7024 Qt Test Attack - 03, 2025
-
- Open
-
For Gerrit Dashboard: QTBUG-134999 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
634000,9 | Disable oit if samplerVariables are not supported | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
634409,3 | Rhi: Add SampleVariables feature | dev | qt/qtbase | Status: MERGED | +2 | 0 |
634836,2 | Rhi: Add SampleVariables feature | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
637433,2 | Disable oit if samplerVariables are not supported | 6.9 | qt/qtquick3d | Status: MERGED | +2 | 0 |