Disable oit if samplerVariables are not supported

The OpenGL ES 3.1 or less may not support texel fetches to
multisample textures, because it doesn't have the sampler id.
Disable oit in this case.

Fixes: QTBUG-134999
Pick-to: 6.9
Change-Id: Ice98b98e475136492942e3a420bdd611da97029f
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>